# keystore-signer-module

./: .gitignore  AGENTS.md  BUG_REPRODUCTION.md  CMakeLists.txt  Cargo.toml  README.md  flake.nix  metadata.json
core/: Cargo.toml
core/src/: hash.rs  storage.rs
core/src/algorithms/: bls.rs  secp256k1.rs
helper-mds/: module-actions.md  module-info.md
keystore-signer-client/: Cargo.toml
keystore-signer-client/src/: lib.rs
rust-lib/: Cargo.toml  keystore_signer.lidl
rust-lib/src/: lib.rs
skills/choose-module-architecture/: SKILL.md
skills/surface-metadata-in-ui/: SKILL.md
skills/use-another-module/: SKILL.md
skills/use-delivery-module/: SKILL.md
skills/use-design-system/: SKILL.md
tests/: flake.nix
tests/caller_a/: CMakeLists.txt  metadata.json
tests/caller_a/rust-lib/: Cargo.toml  test_caller_a.lidl
tests/caller_a/rust-lib/src/: lib.rs
tests/caller_b/: CMakeLists.txt  metadata.json
tests/caller_b/rust-lib/: Cargo.toml  test_caller_b.lidl
tests/caller_b/rust-lib/src/: lib.rs
