[workspace]
resolver = "2"
members = [
    "core",
    "keystore-signer-client",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
zeroize = { version = "1", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
hkdf = "0.12"
chacha20poly1305 = "0.10"
hex = "0.4"
thiserror = "1"
